[gd_scene load_steps=4 format=3 uid="uid://ccqctdss4s6u5"]

[ext_resource type="Script" path="res://addons/PoseWarping/PoseWarping.gd" id="1_lecgu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8kjlp"]
albedo_color = Color(1, 0.337255, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kea8p"]
material = SubResource("StandardMaterial3D_8kjlp")
radius = 0.1
height = 0.2

[node name="PoseWarping" type="Node3D"]
script = ExtResource("1_lecgu")

[node name="LeftIKTarget" type="Marker3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -5.61943e-08, -0.642788, 0.766044, 6.69697e-08, 0.766044, 0.642788, 0, 0, 0)

[node name="ResultDebug" type="MeshInstance3D" parent="LeftIKTarget"]
transform = Transform3D(-1, -6.18173e-08, 6.18173e-08, 8.74228e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_kea8p")
skeleton = NodePath("../../..")

[node name="RightIKTarget" type="Marker3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 0, 5.61943e-08, -0.642788, 0.766044, -6.69697e-08, 0.766044, 0.642788, 0, 0, 0)

[node name="ResultDebug" type="MeshInstance3D" parent="RightIKTarget"]
transform = Transform3D(-1, -6.18173e-08, 6.18173e-08, 8.74228e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_kea8p")
skeleton = NodePath("../../..")

[node name="LeftFootAttachment" type="BoneAttachment3D" parent="."]
transform = Transform3D(-0.975623, 0.0371672, 0.216283, -0.0696969, -0.987006, -0.144781, 0.208092, -0.156326, 0.965536, 0.079531, 0.255067, -0.210493)
bone_name = "LeftFoot"
bone_idx = 64
use_external_skeleton = true
external_skeleton = NodePath("")

[node name="LeftLegTouchRayCast" type="RayCast3D" parent="LeftFootAttachment"]
transform = Transform3D(1, 0, 0, 0, 0.70711, 0.707111, 0, -0.70711, 0.707111, 0, 0, 0)
target_position = Vector3(0, 0.14, 0)
debug_shape_custom_color = Color(0.662745, 0.647059, 0, 1)
debug_shape_thickness = 5

[node name="RightFootAttachment" type="BoneAttachment3D" parent="."]
transform = Transform3D(-0.990874, -0.123241, -0.0545858, 0.0370522, -0.638419, 0.768797, -0.129596, 0.759758, 0.63716, -0.0396977, 0.103349, 0.111844)
bone_name = "RightFoot"
bone_idx = 59
use_external_skeleton = true
external_skeleton = NodePath("")

[node name="RightLegTouchRayCast" type="RayCast3D" parent="RightFootAttachment"]
transform = Transform3D(1, 0, 0, 0, 0.70711, 0.707112, 0, -0.70711, 0.707112, 0, 0, 0)
target_position = Vector3(0, 0.14, 0)
debug_shape_custom_color = Color(0.662745, 0.647059, 0, 1)
debug_shape_thickness = 5

[node name="LeftLegRayCast" type="RayCast3D" parent="."]
top_level = true
debug_shape_thickness = 5

[node name="RightLegRayCast" type="RayCast3D" parent="."]
top_level = true
debug_shape_thickness = 5
